ccws2018-java8-junit4: use java 8 and junit 4 to simplify installation.